--- a/SS2/style.css
+++ b/SS2/style.css
@@ -17,6 +17,10 @@
   background-image: url(./image/hero.jpg);
   background-size: cover;
   height: 700px;
+
+  position: relative;
+  /* Tạo mốc cho position */
+
 }
 
 nav {
@@ -39,15 +43,35 @@ nav .menu li {
   padding: 0px 30px;
   color: #fff;
   font-size: 14px;
+
+  position: relative;
+  z-index: 3;
 }
 
 /* style logo */
 .max-width .logo img {
   width: 80px;
   height: 80px;
+
+  position: relative;
+  z-index: 3;
 }
 
 .max-width .menu {
   width: 800px;
   line-height: 80px;
+}
+
+.opacity-menu {
+  background-color: black;
+  height: 700px;
+
+
+  opacity: 0.7;
+
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
