--- a/SS2/style.css
+++ b/SS2/style.css
@@ -75,3 +75,53 @@ nav .menu li {
   height: 100%;
   z-index: 2;
 }
+
+
+/* Content Menu */
+.content-menu {
+  position: relative;
+  z-index: 3;
+
+  width: 800px;
+  height: 200px;
+  margin-left: 10%;
+  padding-left: 50px;
+  margin-top: 8%;
+  color: #fff;
+}
+
+.content-menu p {
+  font-size: 40px;
+  font-weight: 200;
+  line-height: 60px;
+  text-transform: uppercase;
+}
+
+.content-menu .multi-button {
+  width: 320px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.content-menu .multi-button button {
+  width: 150px;
+  height: 40px;
+  outline: none;
+  cursor: pointer;
+  border: none;
+
+  background: none;
+  border: 2px solid orange;
+  border-radius: 20px;
+}
+
+#button1 {
+  background-color: orange;
+  color: #fff;
+}
+
+#button2 {
+  background: transparent;
+  color: orange;
+}
