--- a/SS2/style.css
+++ b/SS2/style.css
@@ -217,3 +217,65 @@ nav .menu li {
   width: 100%;
   height: 275px;
 }
+
+
+/* Content Guidance */
+
+.content-guidance {
+  width: 100%;
+  height: 700px;
+  background-color: rgb(240, 240, 240);
+}
+
+.content-guidance .max-width {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.guidance {
+  width: 800px;
+  height: fit-content;
+  margin: 0px auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.content-guidance .guidance img {
+  width: 200px;
+  height: 410px;
+}
+
+.guidance .steps {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.steps .step {
+  display: flex;
+  align-self: center;
+  justify-content: space-between;
+  height: 100px;
+}
+
+.steps .step i {
+  color: orange;
+  font-size: 50px;
+}
+
+.steps .step p {
+  font-family: 'Times New Roman', Times, serif;
+  margin-left: 20px;
+  font-size: 20px;
+  font-weight: 200;
+  line-height: 50px;
+}
+
+.steps .download img {
+  width: 160px;
+  height: 50px;
+}
